--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
-@import "tailwindcss";
-@plugin "tailwindcss-primeui";
+@import 'tailwindcss';
+@plugin 'tailwindcss-primeui';
 @custom-variant dark (&:where(.app-dark-mode, .app-dark-mode *));
 @import './app/styles/normalize.css';
+@import 'primeicons/primeicons.css';
